# ebsdtorch

./: .gitignore  LICENSE  README.md  pyproject.toml
ebsdtorch/crystallography/: diffraction.py  ebsd_master.py  ebsd_mc.py  groups.py  kvectors.py  unit_cell.py
ebsdtorch/dictionary/: cov_master.py  ebsdmap_to_bse.py  extended_precision.py  wigner_coeffs.py  wigner_d_coeff.py  wigner_d_coeff_reference.py  wigner_naive.py
ebsdtorch/ebsd/: __init__.py  ebsd_experiment_pats.py  ebsd_master_patterns.py  ebsd_patterns.py  experiment_pats.py  fitting.py  geometry.py  indexers.py  indexing.py  indexing_spca.py  knn.py  master_pattern.py  pca.py  project_hrebsd.py  projection.py  refining.py
ebsdtorch/ebsd_dictionary/: blur_master_pattern_direct.py  ebsd_detector.py  welford_covariance_matrix.py
ebsdtorch/ebsd_dictionary_indexing/: __init__.py  blur_master_pattern_direct.py  di_avg_pc_plane.py  di_avg_pc_plane_pca.py  di_avg_pc_sphere.py  ebsd_di_one_pc_one_phase.py  ebsd_di_one_pc_one_phase_pca.py  ebsd_di_spherical_covmat.py  utils_covariance_matrix.py  utils_nearest_neighbors.py  utils_progress_bar.py
ebsdtorch/ebsd_high_resolution/: __init__.py  hrebsd_project.py
ebsdtorch/geometries/: geometries.py  interpolation.py  lie_algebra.py
ebsdtorch/geometry/: average_pc.py  detector_EBSD.py  lie_algebra_se3.py  rigid_planar.py  square_projection.py
tests/: test_SHT.py  test_di.py  test_di_pca.py  test_ebsd_point_geometry.py  test_lie_algebra_se3.py  test_ori_bunge.py  test_orientation.py  test_real_SHT.py  test_real_SOFT.py  test_wigner_d.py
(+59 files in other folders)
