[tool.poetry]
name = "ebsdtorch"
version = "0.0.0-post.29+eb7494f"
description = ""
authors = ["Zachary Varley <zvarley@andrew.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
